--- a/Innovzen/res/values/strings.xml
+++ b/Innovzen/res/values/strings.xml
@@ -231,6 +231,6 @@
     <string name="user_setting_heat">Heat</string>
     <string name="user_setting_history">Histroy</string>
 <!-- chy -->
-    
+    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
 
 </resources>
