add bluetooth device dialog

--- a/Innovzen/res/values/strings.xml
+++ b/Innovzen/res/values/strings.xml
@@ -230,7 +230,12 @@
     <string name="user_setting_leds">LEDs</string>
     <string name="user_setting_heat">Heat</string>
     <string name="user_setting_history">Histroy</string>
-<!-- chy -->
+	<!-- chy -->
     <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
+    <string name="dialog_select_bluetooth">Select a device to connect.</string>    
+    <string name="none_paired">No devices have been paired</string>
+    <string name="none_found">No devices found</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="title_other_devices">Other Available Devices</string>
 
 </resources>
